{
    "name": "Player Input",
    "maps": [
        {
            "name": "Move",
            "id": "814a6541-1db8-436b-87f5-012f878fd898",
            "actions": [
                {
                    "name": "MoveTowards",
                    "type": "Button",
                    "id": "1a99b727-9521-4eef-86b9-3a02cd705473",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "d4f508e9-ad9b-47b2-8471-8454307000e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "abcab14a-620a-4ab8-a0a2-654b653e5ec0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "5983120b-3e6d-4e78-b556-3fce171709c7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8de04d6c-d7bc-447a-b0c3-b8732386e0fc",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveTowards",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "id": "f7243783-1c5e-4f9d-91fe-7b235cb4d311",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13d56594-44d4-4b95-8729-3fcf455aacce",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20addbe0-a41f-479a-93f3-752258f27aa9",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ab19cb7-9514-46d6-91c2-7f1b10ef64f5",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13e2d6e5-8c70-480f-a0ea-b3631c56d8f1",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
            ]
        }
    ],
    "controlSchemes": []
}